[gd_scene load_steps=53 format=3 uid="uid://cwoqe6rse2btf"]

[ext_resource type="Script" path="res://scripts/player.gd" id="2_0dk0a"]
[ext_resource type="Texture2D" uid="uid://cyuhvw6e6rj4w" path="res://assets/Download6088.png" id="3_gtvbg"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4cl0n"]
load_path = "res://.godot/imported/player.png-6996ee92719617215145dc25df4eeadf.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_iepkc"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3gm1"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_voo6g"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqjr5"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn5b2"]
atlas = ExtResource("3_gtvbg")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_koqem"]
atlas = ExtResource("3_gtvbg")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6buc6"]
atlas = ExtResource("3_gtvbg")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc7gf"]
atlas = ExtResource("3_gtvbg")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6fsu"]
atlas = ExtResource("3_gtvbg")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksi4h"]
atlas = ExtResource("3_gtvbg")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e38wq"]
atlas = ExtResource("3_gtvbg")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgtjs"]
atlas = ExtResource("3_gtvbg")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cljb1"]
atlas = ExtResource("3_gtvbg")
region = Rect2(512, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n3xj"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogxtx"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_il1i6"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfrqs"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_out2g"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ennd0"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_asi1k"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jnvw"]
atlas = ExtResource("3_gtvbg")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj6rs"]
atlas = ExtResource("3_gtvbg")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iegu7"]
atlas = ExtResource("3_gtvbg")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6yix"]
atlas = ExtResource("3_gtvbg")
region = Rect2(256, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s57ol"]
atlas = ExtResource("3_gtvbg")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad7bd"]
atlas = ExtResource("3_gtvbg")
region = Rect2(384, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_52rw0"]
atlas = ExtResource("3_gtvbg")
region = Rect2(448, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2vgw"]
atlas = ExtResource("3_gtvbg")
region = Rect2(512, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbsbp"]
atlas = ExtResource("3_gtvbg")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ptgb"]
atlas = ExtResource("3_gtvbg")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nee3c"]
atlas = ExtResource("3_gtvbg")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_th2bo"]
atlas = ExtResource("3_gtvbg")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_15mv2"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra67s"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_td6dm"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vchj2"]
atlas = SubResource("CompressedTexture2D_4cl0n")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxvnr"]
atlas = ExtResource("3_gtvbg")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eiu1"]
atlas = ExtResource("3_gtvbg")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26l4o"]
atlas = ExtResource("3_gtvbg")
region = Rect2(128, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_by4yw"]
atlas = ExtResource("3_gtvbg")
region = Rect2(192, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojwc3"]
atlas = ExtResource("3_gtvbg")
region = Rect2(256, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_struk"]
atlas = ExtResource("3_gtvbg")
region = Rect2(320, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kderu"]
atlas = ExtResource("3_gtvbg")
region = Rect2(384, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwe8o"]
atlas = ExtResource("3_gtvbg")
region = Rect2(448, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aspwj"]
atlas = ExtResource("3_gtvbg")
region = Rect2(512, 704, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bveqr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iepkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3gm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voo6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqjr5")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn5b2")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_koqem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6buc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc7gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6fsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksi4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e38wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgtjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cljb1")
}],
"loop": true,
"name": &"back_walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n3xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogxtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il1i6")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfrqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_out2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ennd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asi1k")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jnvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj6rs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iegu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6yix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s57ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad7bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52rw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2vgw")
}],
"loop": true,
"name": &"front_walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbsbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ptgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nee3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th2bo")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15mv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra67s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td6dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vchj2")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxvnr")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eiu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26l4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by4yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojwc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_struk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kderu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwe8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aspwj")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_vq238"]
script/source = "extends AnimatedSprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="CircleShape2D" id="CircleShape2D_6lp6x"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_qodci"]
radius = 14.0357

[node name="player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
position = Vector2(0, 1)
collision_layer = 3
script = ExtResource("2_0dk0a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(0, 15)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_bveqr")
animation = &"side_idle"
offset = Vector2(0, -15)
script = SubResource("GDScript_vq238")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_6lp6x")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1, 9)
shape = SubResource("CircleShape2D_qodci")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 1000
limit_bottom = 1000
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="Attack_Cool_Down" type="Timer" parent="."]

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="Attack_Cool_Down" to="." method="_on_attack_cool_down_timeout"]
